--- a/themes/hexo-theme-3-hexo-master/_config.yml
+++ b/themes/hexo-theme-3-hexo-master/_config.yml
@@ -47,9 +47,9 @@ category:
     - Android(Kotlin版)
     - 
   width:
-    lg: 120 # 1468px<屏幕宽度 左侧分类宽度
-    md: 100 # 1024px<屏幕宽度<=1468px 左侧分类宽度
-    sm: 100 # 426px<屏幕宽度<=1024px 左侧分类宽度（ipad）
+    lg: 200 # 1468px<屏幕宽度 左侧分类宽度
+    md: 1468px # 1024px<屏幕宽度<=1468px 左侧分类宽度
+    sm: 150 # 426px<屏幕宽度<=1024px 左侧分类宽度（ipad）
 # 多级分类说明：
 # 比如在文章中设置多个菜单，则默认为多级菜单，即：工具>hexo
 # categories:
